--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,9 @@
 # The following redirect is intended for use with most SPA's that handles routing internally.
 [[redirects]]
-  from = "/*"
+  from = "api/*"
   to = "http://54.79.50.225/api/:splat"
+  status = 200
+
+  from = "/*"
+  to = "/index.html"
   status = 200
