--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Food PWA",
-    "short_name": "FoodPWA",
+    "short_name": "Take5",
     "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#FFE9D2",
