--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Food PWA",
+    "name": "Take5",
     "short_name": "Take5",
     "start_url": "/index.html",
     "display": "standalone",
