--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,13 @@
 {
     "name": "Take5",
-    "short_name": "Take5",
+    "short_name": "Dowell Take5",
     "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#379ae8",
     "theme_color": "#2621f3",
     "orientation": "portrait-primary",
     "icons":[
-        { "src": "/img/icons/favicon.ico", "type": "image/png", "sizes": "48x48" },
+        { "src": "/img/icons/favicon.png", "type": "image/png", "sizes": "48x48" },
         { "src": "/img/icons/dowell.png", "type": "image/png", "sizes": "135x27" }
     ]
 }
