--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,57 +2,52 @@
     "name": "Take5",
     "short_name": "Dowell Take5",
     "start_url": "/index.html",
+    "Scope": "/index.html",
     "display": "standalone",
-    "background_color": "#379ae8",
-    "theme_color": "#2621f3",
+    "theme_color": "#1564bf",
+    "background_color": "#e1e2e1",
     "orientation": "portrait-primary",
     "icons": [
         {
-          "src": "img/icons/icon-72x72.png",
+          "src": "\/img\/icons\/android-icon-36x36.png",
+          "sizes": "36x36",
+          "type": "image\/png",
+          "density": "0.75",
+          "purpose": "maskable any"
+        },
+        {
+          "src": "\/img\/icons\/android-icon-48x48.png",
+          "sizes": "48x48",
+          "type": "image\/png",
+          "density": "1.0",
+          "purpose": "maskable any"
+        },
+        {
+          "src": "\/img\/icons\/android-icon-72x72.png",
           "sizes": "72x72",
-          "type": "image/png",
+          "type": "image\/png",
+          "density": "1.5",
           "purpose": "maskable any"
         },
         {
-          "src": "img/icons/icon-96x96.png",
+          "src": "\/img\/icons\/android-icon-96x96.png",
           "sizes": "96x96",
-          "type": "image/png",
+          "type": "image\/png",
+          "density": "2.0",
           "purpose": "maskable any"
         },
         {
-          "src": "img/icons/icon-128x128.png",
-          "sizes": "128x128",
-          "type": "image/png",
-          "purpose": "maskable any"
-        },
-        {
-          "src": "img/icons/icon-144x144.png",
+          "src": "\/img\/icons\/android-icon-144x144.png",
           "sizes": "144x144",
-          "type": "image/png",
+          "type": "image\/png",
+          "density": "3.0",
           "purpose": "maskable any"
         },
         {
-          "src": "img/icons/icon-152x152.png",
-          "sizes": "152x152",
-          "type": "image/png",
-          "purpose": "maskable any"
-        },
-        {
-          "src": "img/icons/icon-192x192.png",
+          "src": "\/img\/icons\/android-icon-192x192.png",
           "sizes": "192x192",
-          "type": "image/png",
-          "purpose": "maskable any"
-        },
-        {
-          "src": "images/icons/icon-384x384.png",
-          "sizes": "384x384",
-          "type": "image/png",
-          "purpose": "maskable any"
-        },
-        {
-          "src": "img/icons/icon-512x512.png",
-          "sizes": "512x512",
-          "type": "image/png",
+          "type": "image\/png",
+          "density": "4.0",
           "purpose": "maskable any"
         }
       ],
