--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,55 +1,48 @@
 {
-    "name": "Take5",
+    "name": "Dowell Take5",
     "short_name": "Dowell Take5",
-    "start_url": "/index.html",
-    "Scope": "/index.html",
-    "display": "standalone",
     "theme_color": "#1564bf",
     "background_color": "#e1e2e1",
-    "orientation": "portrait-primary",
+    "display": "standalone",
+    "Scope": "/index.html",
+    "start_url": "/index.html",
     "icons": [
-        {
-          "src": "\/img\/icons\/android-icon-36x36.png",
-          "sizes": "36x36",
-          "type": "image\/png",
-          "density": "0.75",
-          "purpose": "maskable any"
-        },
-        {
-          "src": "\/img\/icons\/android-icon-48x48.png",
-          "sizes": "48x48",
-          "type": "image\/png",
-          "density": "1.0",
-          "purpose": "maskable any"
-        },
-        {
-          "src": "\/img\/icons\/android-icon-72x72.png",
-          "sizes": "72x72",
-          "type": "image\/png",
-          "density": "1.5",
-          "purpose": "maskable any"
-        },
-        {
-          "src": "\/img\/icons\/android-icon-96x96.png",
-          "sizes": "96x96",
-          "type": "image\/png",
-          "density": "2.0",
-          "purpose": "maskable any"
-        },
-        {
-          "src": "\/img\/icons\/android-icon-144x144.png",
-          "sizes": "144x144",
-          "type": "image\/png",
-          "density": "3.0",
-          "purpose": "maskable any"
-        },
-        {
-          "src": "\/img\/icons\/android-icon-192x192.png",
-          "sizes": "192x192",
-          "type": "image\/png",
-          "density": "4.0",
-          "purpose": "maskable any"
-        }
-      ],
-      "splash_pages": null
-    }
+      {
+        "src": "\/assets\/images\/icons\/android-icon-36x36.png",
+        "sizes": "36x36",
+        "type": "image\/png",
+        "density": "0.75"
+      },
+      {
+        "src": "\/assets\/images\/icons\/android-icon-48x48.png",
+        "sizes": "48x48",
+        "type": "image\/png",
+        "density": "1.0"
+      },
+      {
+        "src": "\/assets\/images\/icons\/android-icon-72x72.png",
+        "sizes": "72x72",
+        "type": "image\/png",
+        "density": "1.5"
+      },
+      {
+        "src": "\/assets\/images\/icons\/android-icon-96x96.png",
+        "sizes": "96x96",
+        "type": "image\/png",
+        "density": "2.0"
+      },
+      {
+        "src": "\/assets\/images\/icons\/android-icon-144x144.png",
+        "sizes": "144x144",
+        "type": "image\/png",
+        "density": "3.0"
+      },
+      {
+        "src": "\/assets\/images\/icons\/android-icon-192x192.png",
+        "sizes": "192x192",
+        "type": "image\/png",
+        "density": "4.0"
+      }
+    ],
+    "splash_pages": null
+  }
