--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
     "name": "Dowell Take5",
     "short_name": "Dowell Take5",
     "theme_color": "#f5f5f5",
-    "background_color": "#e1e2e1",
+    "background_color": "#f5f5f5",
     "display": "standalone",
     "Scope": "/index.html",
     "start_url": "/index.html",
