--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "^5.1.45",
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
+    "sweetalert2": "^9.10.12",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuetify": "^2.2.11",
