--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "date-fns": "^2.14.0",
+    "laravel-echo": "^1.8.0",
+    "moment": "^2.27.0",
+    "pusher-js": "^6.0.3",
     "sweetalert2": "^9.10.12",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
